content edits focused on main page

--- a/src/faq.html
+++ b/src/faq.html
@@ -10,8 +10,32 @@
     <title>Frequently Asked Questions - Atterbury Sea Cadets and NLCC Training Company Carl Brashear</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <div id="skip"><a href="#main">Skip to Main Content</a></div>
+    <main id="main" role="main">
+    <h1>Frequently Asked Questions</h1>
+    <dl>
+      <dt>How much time will this take?</dt>
+      <dd>Usually not as much as your routine extracurricular school activity.  We drill once a month on a Saturday and Sunday full day.  Plan on scheduling two weeks in the summer.  Other activities are typically voluntary and will not take up more than a couple hours per month. In addition to organized activities, cadets will need to set aside a few hours per month to independently work through required correspondence course materials.</dd>
+      <dt>I have an after school job. Can I still join?</dt>
+      <dd>Many of our cadets have jobs through the course of their Sea Cadet career. We ask that you communicate to your employer that you need one weekend per month off and a week during summer or winter to attend training. We can help with this communication and provide a letter for your employer if necessary. With proactive communication, most employers are easy to work with and appreciate that they benefit from the leadership training you get in our program.</dd>
+      <dt>I am in the (Band, Football, Baseball, etc) program at my school. Can I still join?</dt>
+      <dd>We find that with the right commitment cadets can be given flexibility with their drill attendance requirement to support <strong>one</strong> season, but need to be especially diligent about attending our optional and requirements outside of the one season that they are focused on some other extra-curricular activity. Cadets who miss drill in the fall because of football, in the winter because of basketball, and in spring because of track do not really have time for our program and should not join. This also requires a little extra commitment from parents because cadets will be asked to throw a seabag in the car and come straight to drill from their conflicting activity.</dd>
+      <dt>Is this safe?</dt>
+      <dd>Safety and welfare of our cadets is our primary concern.  Although no activity is totally safe, we try and think through every evolution from multiple angles prior to ever having a cadet participate.  In addition, most of our activities have already been conducted by hundreds of active duty military members who have demonstrated the inherent risks.  We analyze those experiences and think of what additional ones can occur with younger, smaller, and weaker kids and remove certain aspects of the training or add additional safety features.  No one wants to see an evolution stopped because of an accident.</dd>
+      <dt>What background checks do your adult staff go through?</dt>
+      <dd>Each instructor and officer in the Sea Cadets goes through a background check, an interview process, as well as having references verified.  They only conduct trainings they have been trained and qualified to conduct.  In addition, we go through ongoing training concerning hazing, harassment, and child safety.  We have protocols in place concerning being alone with cadets, always having additional supervision, and records of all counseling sessions.  Parents are encouraged to personally speak with any of our officers or instructors.</dd>
+      <dt>Do cadets have to enlist in the military or go to an academy?</dt>
+      <dd>No.  There are no military requirements after the program.  Many cadets use this program as a trial activity to see if the military is something they would enjoy or even consider.  We never push any cadet to make the military their choice of careers.  We think this program will help them prepare for anything they do in life, either military, government, or civilian.</dd>
+      <dt>Are there long-term benefits to this program?</dt>
+      <dd>Absolutely.  If a cadet enlists in the military, they may do so at advanced pay grades.  Since this gives them a head-start, over the course of a career this can result in higher final ranks, and thousands of dollars in additional pay.  If a cadet desires to go to an officer program, there are viewed in a preferential manner, giving them a much better chance of acceptance.  For cadets choosing civilian careers, there are many scholarships available.</dd>
+      <dt>How does this program compare to the Boy Scouts, Civil Air Patrol, Young Marines, or other youth organizations?</dt>
+      <dd>It is simply a different expression of many of the same ideals.  We do many activities similar to those programs, but are aligned along the US Navy structure.  Unlike Boy Scouts, we teach about military customs, marching, military uniforms, etc.  Unlike the Civil Air Patrol or Young Marines, we tend to do a wider variety of military based activities versus activities based on solely on search and rescue (CAP) or parades (YM).  All programs have their merit and can be of benefit to your son or daughter.</dd>
+      <dt>If my son/daughter is homeschooled, can they still join?</dt>
+      <dd>Yes.</dd>
+      <dt>What are the next steps?</dt>
+      <dd>We require prospective cadets attend a drill.  You may do so at no cost of obligation other than the cost of any meals or special activities at the drill that you choose to visit. Once you are ready to start, there are few simple forms to fill out and you are on your way.  Upon joining you will have an initial 90-day probation period.  Once you have past 90 days you are a full cadet.</dd>
+    </dl>
+    </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
