--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/site.css">
     <title>Atterbury Sea Cadets and NLCC Training Company Carl Brashear Home</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+    <div id="skip"><a href="#main">Skip to Main Content</a></div>
+    <nav class="nav navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">Atterbury Battalion USNSCC</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="atterbury-battalion-nscc-info.html">Sea Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tc-carl-brashear-nlcc-info.html">League Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="parents.html">Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="volunteering.html">Volunteers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sponsors.html">Sponsors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main id="main" role="main">
+      <header class="jumbotron jumbotron-fluid bg-dark text-light hero-container">
+        <div class="container-fluid text-center bg-dark">
+          <h1>Welcome to Atterbury Battalion USNSCC and USNLCC League Training Company Carl Brashear</h1>
+          <p class="lead pb-4">USNSCC is a national youth leadership development organization that promotes interest and skill in naval disciplines while instilling strong moral character and life skills through leadership and technical programs modeled after the Navy's professional development system.</p>
+          <p class="lead pb-4">USNSCC is comprised of two programs. The Naval Sea Cadet Corps (NSCC) program is for young people ages 13 through the completion of high school. Also included under the USNSCC umbrella is our junior program the Navy League Cadet Corps (NLCC), for young people ages 10 through 13. </p>
+        </div>
+      </header>
+      <section id="services" class="container">
+        <h2 class="display-4 text-center mt-5 mb-3">Discover our Program</h2>
+        <div class="row text-center">
+           <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                 <img class="card-img-top" src="img/nscc-pool-200px.jpg" alt="Sea Cadets">
+                 <div class="card-body">
+                    <h4 class="card-title">Sea Cadets</h4>
+                    <p class="card-text">Cadets from age thirteen through the summer after their Senior year in High School</p>
+                 </div>
+                 <div class="card-footer py-4">
+                    <a href="atterbury-battalion-nscc-info.html" class="btn btn-secondary">Learn More &raquo;</a>
+                 </div>
+              </div>
+           </div>
+           
+           <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                 <img class="card-img-top" src="img/league-cadet-hose-200px.JPG" alt="League Cadets">
+                 <div class="card-body">
+                    <h4 class="card-title">League Cadets</h4>
+                       <p class="card-text">Cadets age 10 to 13</p>
+                 </div>
+                 <div class="card-footer py-4">
+                    <a href="tc-carl-brashear-nlcc-info.html" class="btn btn-secondary">Learn More &raquo;</a>
+                 </div>
+              </div>
+           </div>
+           
+           <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                 <img class="card-img-top" src="img/nscc-honor-veteran-200px.jpg" alt="Parents">
+                 <div class="card-body">
+                    <h4 class="card-title">Parents</h4>
+                    <p class="card-text">Looking for what Sea Cadet and League Cadet parents need to know?</p>
+                 </div>
+                 <div class="card-footer py-4">
+                    <a href="parents.html" class="btn btn-secondary">Learn More &raquo;</a>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </section>
+      <section class="container-fluid text-center py-4 mt-4" id="contact">
+        <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
+        <p class="lead pb-3">Send us a message and we will get back to you as soon as possible.</p>
+        <a href="mailto:co@atterburyseacadets.org" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+      </section>
+      <footer class="py-3 bg-light">
+        <div class="container">
+           <p class="text-center">Copyright &copy; Atterbury Battalion USNSCC Inc 2020</p>
+        </div>
+        <div class="container text-center">
+          <a href="https://www.seacadets.org"><img alt="NSCC Logo" src="img/NSCC-Logo-with-crest-and-slogan-HORIZONTAL.png" height="50"></a>
+        </div>
+     </footer>
+  </main>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
 </html>
