added text content to volunteer page

--- a/src/volunteering.html
+++ b/src/volunteering.html
@@ -10,8 +10,46 @@
     <title>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <h1>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
+    <h2>About the USNSCC and USNLCC</h2>
+    <p>The US Naval Sea Cadet Corps is a year-round non-profit youth education program.  We provide compelling, life-changing programs for America's youth that instill the values of teamwork, discipline, camaraderie, and service through our passionate all-volunteer force and our partnerships with the US Navy and Coast Guard.  Atterbury Battalion builds upon the core US Naval Sea Cadets program and adds emphasis on public safety, trade skills, and scuba diving. The Atterbury unit serves 25 cadets ranging in age from 10-18. Within the state of Indiana there are currently 134 cadets being served.</p>
+    <p>The Sea Cadet program provides a significant value to the cadets we serve by allowing unique training opportunities, stressing the value of community service, encouraging physical fitness, and giving access to accelerated promotion opportunities for those cadets that complete our program and go on to enlist in one of the US military branches.  Cadets with an eye to serving as a commissioned officer are encouraged by the high percentage of incoming freshman to the US Service Academies who have completed our program (12% of the US Naval Academy class of 2019 participated in the Sea Cadets). Local units are required to complete a minimum of 160 contact hours per year and older students are also required to attend at least one residential training program per year ranging in duration from 5-14 days. The residential training programs typically focus on the various vocations that exist in today’s Department of Defense.</p>
+    <p>Today's U.S. Naval Sea Cadet Corps continues to further the image of our maritime services by adhering to a standardized training program designed to:
+      <ol>
+        <li>Develop an interest and ability in seamanship and seagoing skills</li>
+        <li>Instill virtues of good citizenship and strong moral principles in each cadet</li>
+        <li>Demonstrate the value of an alcohol-free, drug-free and gang-free lifestyle</li>
+        <li>Expose cadets to the prestige of public service and a variety of career paths through hands-on training with our nation's armed services</li>
+      </ol>
+    </p>
+    <h2>Volunteering</h2>
+    <p>Our cadets typically have a full weekend of drill once per month, where their days are filled with reinforcement of our core training curriculum and focus on main topic areas for the month. These weekends cannot happen without the effort of adult volunteers planning the weekends, handling operational concerns such as supply, finance, and administration, and either directly engaging as Subject Matter Experts teaching cadets or providing supervision on drill weekend.</p>
+    <p>As we continue to grow, we need committed adults who want to have a lasting impact both on our society and on the lives of the young people that we serve.</p>
+    <h3>Do volunteers need to have a military background?</h3>
+    <p>While our program is military-themed and closely follows the structure and customs of the United States Navy, many of our successful volunteers do not have a military background. Everyone has strengths and skills that they can bring to the table and benefit cadets.</p>
+    <h3>Pre-requisites for volunteers</h3>
+    <p>The first requirement for our volunteers is a willingness to put as much energy into these cadets as they are willing to put into themselves. We ask the cadets to demonstrate a commitment to being their best and ask that volunteers show the cadets that they are important by simply being there for them. In addition to this basic requirement, eligibility is determined by the following:
+      <ul>
+        <li>United States citizen or legal permanent resident</li>
+        <li>Free of felony convictions</li>
+        <li>Capable of credibly conveying USNSCC values (Honor, Courage, and Commitment) to our cadets</li>
+      </ul>
+    </p>
+    <h3>What is the time commitment?</h3>
+    <p>The typical time commitment consists of attending monthly drill weekends and some participation in planning activities between drills. For most volunteers, this would not exceed a couple of hours per week outside of normal drill activities. Some volunteers may choose to accept roles within the unit that have additional time commitment.</p>
+    <p>Additionally, adults have introductory correspondence assignments (the Officer and Midshipman’s Study Guide) that needs to be completed in the first year of enrollment and should expect at some point in the first year to attend an in-person training conducted by our Regional Director. All adult volunteers must complete an online “Darkness to Light” program annually to help raise awareness and prevent child sexual abuse.</p>
+    <p>Adults are encouraged to volunteer as “Escort Officers” at the advanced trainings offered to cadets during summer and winter breaks. These trainings can last from 5-14 days and are considered by many to be a highlight of being a Sea Cadet. The trainings cannot happen without volunteers and participation is one of the components of the advancement path for adult volunteers, but it is also understood that some adults will not be able to make time for this. Adults who do not anticipate being available for escort duty at least every other year will be asked to enroll as an Auxiliarist.</p>
+    <h3>What do volunteers get out of it?</h3>
+    <p>Make no mistake – volunteering is hard work and can sometimes even feel like a job. Our volunteers’ “paychecks” can come in various forms:
+      <ul>
+        <li>Primarily – we know that we are making a difference. Every month when cadets are dismissed from drill, we know that we have positively impacted the lives of our cadets and families and that as a result they will be better positioned to positively impact the lives of others</li>
+        <li>Many employers view volunteerism favorably, so both the act of volunteering and the experience gained helping to run the organization can look good on a resume</li>
+        <li>Adults who fully engage in the program have opportunities to build out their network with other volunteers from across the globe and can take advantage of travel opportunities</li>
+        <li>It is often fun – we stress to our adult volunteers that while the program is not designed to be fun for the adult volunteers, if we are focused on providing value to our cadets we more often than not find that we are enjoying our time serving them and drill weekend becomes “fun” for the adults as well</li>
+      </ul>
+    </p>
+    <h3>I want to volunteer. What now?</h3>
+    <p>If you are ready to become part of our team of volunteers, please send an email to Atterbury Battalion’s Commanding Officer, LTjg Kyle Burns, at <a href="mailto:co@atterburyseacadets.org">co@atterburyseacadets.org</a>.</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
