--- a/src/volunteering.html
+++ b/src/volunteering.html
@@ -10,6 +10,39 @@
     <title>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</title>
   </head>
   <body>
+    <div id="skip"><a href="#main">Skip to Main Content</a></div>
+    <nav class="nav navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">Atterbury Battalion USNSCC</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="atterbury-battalion-nscc-info.html">Sea Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tc-carl-brashear-nlcc-info.html">League Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="parents.html">Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="volunteering.html">Volunteers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sponsors.html">Sponsors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main id="main" role="main">
     <h1>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
     <h2>About the USNSCC and USNLCC</h2>
     <p>The US Naval Sea Cadet Corps is a year-round non-profit youth education program.  We provide compelling, life-changing programs for America's youth that instill the values of teamwork, discipline, camaraderie, and service through our passionate all-volunteer force and our partnerships with the US Navy and Coast Guard.  Atterbury Battalion builds upon the core US Naval Sea Cadets program and adds emphasis on public safety, trade skills, and scuba diving. The Atterbury unit serves 25 cadets ranging in age from 10-18. Within the state of Indiana there are currently 134 cadets being served.</p>
@@ -50,6 +83,20 @@
     </p>
     <h3>I want to volunteer. What now?</h3>
     <p>If you are ready to become part of our team of volunteers, please send an email to Atterbury Battalion’s Commanding Officer, LTjg Kyle Burns, at <a href="mailto:co@atterburyseacadets.org">co@atterburyseacadets.org</a>.</p>
+    <section class="container-fluid text-center py-4 mt-4" id="contact">
+      <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
+      <p class="lead pb-3">Send us a message and we will get back to you as soon as possible.</p>
+      <a href="mailto:co@atterburyseacadets.org" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+    </section>
+    <footer class="py-3 bg-light">
+      <div class="container">
+         <p class="text-center">Copyright &copy; Atterbury Battalion USNSCC Inc 2020</p>
+      </div>
+      <div class="container text-center">
+        <a href="https://www.seacadets.org"><img alt="NSCC Logo" src="img/NSCC-Logo-with-crest-and-slogan-HORIZONTAL.png" height="50"></a>
+      </div>
+   </footer>
+  </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
