adds style and structural changes for remaining pages

--- a/src/atterbury-battalion-nscc-info.html
+++ b/src/atterbury-battalion-nscc-info.html
@@ -6,13 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/site.css">
     <title>The Sea Cadets of Atterbury Battalion, USNSCC</title>
   </head>
   <body>
+    <!-- BEGIN COMMON HEADER -->
+    <div id="skip"><a href="#main">Skip to Main Content</a></div>
+    <nav class="nav navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">Atterbury Battalion USNSCC</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="atterbury-battalion-nscc-info.html">Sea Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tc-carl-brashear-nlcc-info.html">League Cadets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="parents.html">Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="volunteering.html">Volunteers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sponsors.html">Sponsors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- END COMMON HEADER -->
+    <main id="main" role="main">
     <h1>Atterbury Battalion USNSCC Cadet Information</h1>
     <h2>Being a Sea Cadet</h2>
     <h2>Being an Atterbury Sea Cadet</h2>
+    </main>
+    <!-- BEGIN COMMON FOOTER -->
+    <footer class="py-3 bg-light">
+      <div class="container">
+         <p class="text-center">Copyright &copy; Atterbury Battalion USNSCC Inc 2020</p>
+      </div>
+      <div class="container text-center">
+        <a href="https://www.seacadets.org"><img alt="NSCC Logo" src="img/NSCC-Logo-with-crest-and-slogan-HORIZONTAL.png" height="50"></a>
+      </div>
+   </footer>
+   <!-- END COMMON FOOTER -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
