--- a/src/volunteering.html
+++ b/src/volunteering.html
@@ -10,6 +10,7 @@
     <title>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</title>
   </head>
   <body>
+    <!-- BEGIN COMMON HEADER -->
     <div id="skip"><a href="#main">Skip to Main Content</a></div>
     <nav class="nav navbar-expand-lg navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +43,7 @@
         </ul>
       </div>
     </nav>
+    <!-- END COMMON HEADER -->
     <main id="main" role="main">
     <h1>Volunteering with Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
     <h2>About the USNSCC and USNLCC</h2>
@@ -83,6 +85,7 @@
     </p>
     <h3>I want to volunteer. What now?</h3>
     <p>If you are ready to become part of our team of volunteers, please send an email to Atterbury Battalion’s Commanding Officer, LTjg Kyle Burns, at <a href="mailto:co@atterburyseacadets.org">co@atterburyseacadets.org</a>.</p>
+    <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
       <div class="container">
          <p class="text-center">Copyright &copy; Atterbury Battalion USNSCC Inc 2020</p>
@@ -91,6 +94,7 @@
         <a href="https://www.seacadets.org"><img alt="NSCC Logo" src="img/NSCC-Logo-with-crest-and-slogan-HORIZONTAL.png" height="50"></a>
       </div>
    </footer>
+   <!-- END COMMON FOOTER -->
   </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
