--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -45,7 +45,7 @@
     </nav>
     <!-- END COMMON HEADER -->
     <main id="main" role="main">
-      <h1>Hello, world!</h1>
+      <h1>Sponsoring Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
     </main>
     <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
