initial text for cadet pages

--- a/src/atterbury-battalion-nscc-info.html
+++ b/src/atterbury-battalion-nscc-info.html
@@ -47,7 +47,14 @@
     <main id="main" role="main">
     <h1>Atterbury Battalion USNSCC Cadet Information</h1>
     <h2>Being a Sea Cadet</h2>
+    <p>Both of our cadet programs consist of a local unit component and training opportunities with our national program. Local units vary in activities and focus, but each local unit holds at least 40 drill sessions (a "drill session" is approximately 1/2 day of training), meets a standardized requirement for correspondence courses prescribed by the national program, and share standard regulations and standards.</p>
+    <p>The senior cadet program exposes its cadets to the full rigors of a military training program. Cadets are required to attend a mandatory two-week recruit training camp. After this requirement is met, cadets are eligible to participate in a variety of advanced training sessions. These sessions serve to expose cadets to seamanship and seagoing subjects. They also focus on developing an appreciation for our country's rich naval history, customs and traditions. </p>
+    <p>After enrolling in the program, all Sea Cadets must attend a mandatory two-week recruit training session. These training sessions are taught at the Navy’s Recruit Training Command, at other naval bases or stations and at regional recruit training sites using other military host resources.</p>
+    <p>The curriculum of this training is approved by the U.S. Navy and standardized at all training sites. Cadets receive 106 hours of instruction, with a focus on the Navy’s core values of honor, courage and commitment. Both tone and tenor of instruction are modeled after the Navy’s recruit training.</p>
     <h2>Being an Atterbury Sea Cadet</h2>
+    <p>The first mission of an Atterbury Sea Cadet is to be an <strong>outstanding Sea Cadet</strong>. We strive to meet and exceed the expectations of our national program in every way. We extend on the national program by adding a strong local focus on the topics of diving (scuba) and public safety. </p>
+    <p>Our local unit typically meets for a full weekend each month at locations around South Central Indiana. In addition to these drill sessions, we occasionally support community events with an emphasis on anything supporting veteran causes.</p>
+    <p>Beginning in January 2021, we are adding additional opportunities for cadets who want to pursue a deep focus on scuba diving. This path will be eligible to cadets who have advanced in the program far enough to become eligible and feature a monthly opportunity to get into the water outside of normal drill time.</p>
     </main>
     <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
