--- a/src/tc-carl-brashear-nlcc-info.html
+++ b/src/tc-carl-brashear-nlcc-info.html
@@ -47,7 +47,14 @@
     <main id="main" role="main">
     <h1>Atterbury Battalion USNSCC Training Company Carl Brashear - Cadet Information</h1>
     <h2>Being a League Cadet</h2>
+    <p>Both of our cadet programs consist of a local unit component and training opportunities with our national program. Local units vary in activities and focus, but each local unit holds at least 40 drill sessions (a "drill session" is approximately 1/2 day of training), meets a standardized requirement for correspondence courses prescribed by the national program, and share standard regulations and standards.</p>
+    <p>The NLCC training program is modeled after the Sea Cadet program, but is tailored to be age-appropriate. The training program is less arduous, but still includes a wide variety of training opportunities designed to give League Cadets exposure to Navy life.</p>
+    <p>Cadets can attend a one-week, away-from-home Navy League Orientation class. Cadets who complete orientation can participate in advanced training sessions such as classes in aviation, sailing, leadership, medical and adventure training. League Cadets also learn about small boats and small boat safety using the U.S. Coast Guard’s safe boating curriculum.</p>
+    <p>This junior cadet program introduces its members to naval life through instruction in basic seamanship and leadership. NLCC members are able to participate in monthly drill sessions and during school breaks and in a one-week orientation class as well as in specially-designed annual training sessions. The purpose of the NLCC program is to prepare its cadets for success upon entering NSCC by exposing them to the fundamentals of seamanship and leadership. The training program is less arduous than NSCC's, but still includes a wide variety of away-from-home, one-week training opportunities designed to give cadets exposure to Navy life.</p>
     <h2>Being a Training Company Carl Brashear League Cadet</h2>
+    <p>The first mission of an Atterbury Sea Cadet is to be an <strong>outstanding League Cadet</strong>. We strive to meet and exceed the expectations of our national program in every way. We extend on the national program by adding a strong local focus on the topics of diving (scuba) and public safety. </p>
+    <p>Our local unit typically meets for a full weekend each month at locations around South Central Indiana. In addition to these drill sessions, we occasionally support community events with an emphasis on anything supporting veteran causes.</p>
+    <p>Beginning in January 2021, we are adding additional opportunities for cadets who want to pursue a deep focus on scuba diving. This path will be eligible to cadets who have advanced in the program far enough to become eligible and feature a monthly opportunity to get into the water outside of normal drill time.</p>
     </main>
         <!-- BEGIN COMMON FOOTER -->
         <footer class="py-3 bg-light">
