initial sponsor text

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -46,6 +46,14 @@
     <!-- END COMMON HEADER -->
     <main id="main" role="main">
       <h1>Sponsoring Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
+      <p>Directly volunteering with our organization can be a big time commitment and we are often asked how people can help if they are unable to give their time. There are some great options to help support our effort to provide outstanding training opportunities to the young people that we serve without leaving anyone behind because they cannot afford to participate.</p>
+      <dl>
+        <dt>Amazon Smile</dt>
+        <dl>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html">Amazon Smile</a> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dl>
+        <dt>Sponsor an Event</dt>
+        <dl>Occasionally opportunities come up for our unit to conduct an event that would not be possible without outside financial help. In January 2020, the unit was able to visit the <a href="https://silversidesmuseum.org">USS Silversides</a> museum in Muskegon, MI thanks to a generous donation from Allied Wholesale Electrical Supply. Please contact us if you would be interested in sponsoring one-time events</dl>
+        
+      </dl>
     </main>
     <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
