completed initial sponsor page text

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -49,11 +49,20 @@
       <p>Directly volunteering with our organization can be a big time commitment and we are often asked how people can help if they are unable to give their time. There are some great options to help support our effort to provide outstanding training opportunities to the young people that we serve without leaving anyone behind because they cannot afford to participate.</p>
       <dl>
         <dt>Amazon Smile</dt>
-        <dl>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html">Amazon Smile</a> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dl>
+        <dd>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html">Amazon Smile</a> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dd>
         <dt>Sponsor an Event</dt>
-        <dl>Occasionally opportunities come up for our unit to conduct an event that would not be possible without outside financial help. In January 2020, the unit was able to visit the <a href="https://silversidesmuseum.org">USS Silversides</a> museum in Muskegon, MI thanks to a generous donation from Allied Wholesale Electrical Supply. Please contact us if you would be interested in sponsoring one-time events</dl>
-        
+        <dd>Occasionally opportunities come up for our unit to conduct an event that would not be possible without outside financial help. In January 2020, the unit was able to visit the <a href="https://silversidesmuseum.org">USS Silversides</a> museum in Muskegon, MI thanks to a generous donation from Allied Wholesale Electrical Supply. Please contact us if you would be interested in sponsoring one-time events</dd>
+        <dt>Ongoing Partnership</dt>
+        <dd>Our single greatest ongoing expense is currently facilities in which to conduct our monthly drills. We would like to find a partner willing to donate or give a discount access to a location in South Central Indiana that could be our regular drill location.</dd>
+        <dd>Another ongoing expense that our organization could use partnership on is help offsetting the per-cadet cost of purchasing and replacing uniforms. Some Sea Cadets have partners who have elected to help by "sponsoring" specific uniform components. For example, there are individuals and organizations who have committed to purchasing boots as new cadets come aboard or taking care of the cost of the Navy Working Uniform that we wear at most drills when a new cadet is recruited. With such an ongoing partnership, we could significantly lower our initial enrollment fees and increase accessibility of our program to more Hoosier families.</dd>
+        <dt>"One off" Donations</dt>
+        <dd>One-time donations of money or materials are always appreciated and being a 501(c)3 organization, these may be tax deductible. If you would like to make an "in kind" donation of materials, please contact us to discuss what you would like to donate. Many employers also offer matching opportunities and we are currently registered on the Benevity and Donaide giving platforms.</dd>
       </dl>
+      <section class="container-fluid text-center py-4 mt-4" id="contact">
+        <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
+        <p class="lead pb-3">To find out more about sponsorship or partnering opportunities, send us a message and we will get back to you as soon as possible.</p>
+        <a href="mailto:co@atterburyseacadets.org" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+      </section>
     </main>
     <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
