updated sponsor page

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -47,6 +47,7 @@
     <main id="main" role="main">
       <h1>Sponsoring Atterbury Sea Cadets and NLCC Training Company Carl Brashear</h1>
       <p>Directly volunteering with our organization can be a big time commitment and we are often asked how people can help if they are unable to give their time. There are some great options to help support our effort to provide outstanding training opportunities to the young people that we serve without leaving anyone behind because they cannot afford to participate.</p>
+      <h2>Ways to help</h2>
       <dl>
         <dt>Amazon Smile</dt>
         <dd>One easy way to help us is to use the <a href="https://smile.amazon.com/gp/charity/homepage.html">Amazon Smile</a> program. This program allows you to shop like you normally do on Amazon.com and a portion of the revenue from your purchases will be directed to your designated charitable organization. Please consider using this program and also consider designating "Atterbury Battalion USNSCC INC" as your selected organization.</dd>
@@ -57,6 +58,13 @@
         <dd>Another ongoing expense that our organization could use partnership on is help offsetting the per-cadet cost of purchasing and replacing uniforms. Some Sea Cadets have partners who have elected to help by "sponsoring" specific uniform components. For example, there are individuals and organizations who have committed to purchasing boots as new cadets come aboard or taking care of the cost of the Navy Working Uniform that we wear at most drills when a new cadet is recruited. With such an ongoing partnership, we could significantly lower our initial enrollment fees and increase accessibility of our program to more Hoosier families.</dd>
         <dt>"One off" Donations</dt>
         <dd>One-time donations of money or materials are always appreciated and being a 501(c)3 organization, these may be tax deductible. If you would like to make an "in kind" donation of materials, please contact us to discuss what you would like to donate. Many employers also offer matching opportunities and we are currently registered on the Benevity and Donaide giving platforms.</dd>
+      </dl>
+      <h2>Current partners</h2>
+      <dl>
+        <dt>Amvets Post 509 - Columbus, IN</dt>
+        <dl>Amvets Post 509 sponsored our unit's charter in February 2012</dl>
+        <dt><a href="https://www.diverssupplyindy.com/">Divers Supply Indy</a> - Indianapolis, IN</dt>
+        <dl>For several years running, Divers Supply Indy has supported giving our cadets access to an annual "Try Scuba" event and has supported multiple Open Water certification classes for us. Beginning in January 2021, that partership will deepen, enabling monthly scuba diving opportunities to eligible cadets and the SSI Scuba Rangers program for our League cadets.</dl>
       </dl>
       <section class="container-fluid text-center py-4 mt-4" id="contact">
         <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
