--- a/src/parents.html
+++ b/src/parents.html
@@ -55,6 +55,49 @@
       <p>Atterbury Sea Cadet parents are an amazing resource to our program and we could not get by without their support. Every one of our parents provides critical support in enabling their child to show up to drill when they are supposed to be there and with what they are supposed to bring. This type of support is especially needed because many of our cadets have other extra-curricular activities making the well-rounded and parental support helps make that happen.</p>
       <p>In addition to the support that we need every parent providing their cadet at home, parents who would like to become more involved, are encouraged to take part in our Parent Auxiliary group. From preparing meals to jumping in as a subject mater expert from time to time, a little help goes a long way.</p>
       <p>Parents who want to go "all in" may choose to become volunteers in our organization. When a parent wants to volunteer, we try to make sure they are not put in a supervisory position over their own cadet and try to keep as much space between them as possible to allow a clear separation between roles at home and roles at Sea Cadet activities. For more information about volunteering, check out our <a href="volunteering.html">Volunteers page</a>.</p>
+      <h2>What our parents are saying</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <blockquote>
+              Our son is fortunate to be a cadet of the Atterbury Battalion of the U. S. Navy Sea Cadet Corp. The oportunites that he has received during local drills and during advanced training has helped to grow him into a more self-reliant and accountable young man. We appreciate the dedication and support that is provided by the adult leaders and volunteers. We looked forward to his continued growth.
+              <cite>Scott and Joleen Krueger</cite>
+            </blockquote>
+          </div>
+          <div class="carousel-item">
+            <blockquote>
+              A great group of kids and leaders! The things learned will be instilled in them and used in everyday life,,,,integrity, honor, respect and honesty! These attributes are so important for our young kids to learn! Thank you Atterbury Sea Cadets!!
+              <cite>Jenise Sanders</cite>
+            </blockquote>
+          </div>
+          <div class="carousel-item">
+            <blockquote>
+              Fantastic group of young men and women who love their country and who work hard to reach their goals. The adult leaders are fantastic and teach the cadets a large variety of skills and life lessons.
+              <cite>Adrian Krebs</cite>
+            </blockquote>
+          </div>
+          <div class="carousel-item">
+            <blockquote>
+              This unit rocks! Been involved with Sea Cadets for 7 years now, the last 3 have been with the Atterbury Battalion. Great group of young men and women! Our parent support is fantastic! The best thing about the unit are the adult volunteers...they put so much time, energy and effort to make the drills awesome and meaningful!
+              <cite>Autumn Schildt</cite>
+            </blockquote>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </main>
     <!-- BEGIN COMMON FOOTER -->
     <footer class="py-3 bg-light">
